--- a/cvcrunchweb/webappcv/templates/base.html
+++ b/cvcrunchweb/webappcv/templates/base.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="{{ url_for('static', filename='images/favicon.png') }}" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}" />
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/dropzone.css') }}" />
-    <meta name="csrf-token" content="{{ csrf_token() }}">
+    <meta name="csrf-token" content="{{ csrf_token }}">
 </head>
 <body class="{% block body_class %}{% endblock %}">
     <header class="text-bg-dark fixed-top cv-crunch-header">
